compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__suggest_wrapping_a_value_into_error_if_types_match_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n    wibble(\"a\")\n}\n\nfn wibble(arg: Result(Int, String)) { todo }\n"
---
----- SOURCE CODE

pub fn main() {
    wibble("a")
}

fn wibble(arg: Result(Int, String)) { todo }


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:12
  │
3 │     wibble("a")
  │            ^^^ Did you mean to wrap this in an `Error`?

Expected type:

    Result(Int, String)

Found type:

    String
